Fix contrast issues with headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ h1 {
 #home-blurb h2 {
     font-size: 100px;
     font-family: "Bebas Neue", sans-serif;
-    color: rgb(204, 160, 0);
+    color: #8F7000;
     letter-spacing: 3px;
 }
 
@@ -196,7 +196,7 @@ h1 {
 
 .columns h2 {
     font-family: "Bebas Neue", sans-serif;
-    color: rgb(204, 160, 0);
+    color: #8F7000;
     font-size: 42px;
     letter-spacing: 2px;
     text-shadow: 2px 2px 5px rgb(0, 29, 61, .4);
@@ -234,7 +234,7 @@ footer {
     font-size: 160%;
     margin: 1%;
     padding: 2%;
-    color: rgb(204, 160, 0);
+    color: #8F7000;
 }
 
 /* fixtures table */
@@ -243,7 +243,7 @@ footer {
     font-family: "Bebas Neue", sans-serif;
     font-size: 80px;
     letter-spacing: 8px;
-    color: rgb(204, 160, 0);
+    color: #8F7000;
     margin: 5% 10% 5% 10%;
     text-align: center;
     text-shadow: 2px 2px 5px rgb(0, 29, 61, .4);
